# plant-watering-agent

./: .gitignore  README.md
Journal/: 10-better-yolo-model.md  10-watering-hose.md  11-fix-yolo-multi-label.md  12-dot-from-region.md  13-hello-robot-journal.md  14-hello-robot-remote.md  15-hello-robot-funmap.md  16-Bandwidth-issue.md  17-hello-robot-rtabmap.md  18-System-Flowchart.md  19-nav2.md  2-Image-labeling.md  20-moveit.md  21-self-setup-moveit.md  22-stretch-realsense-imu.md  23-stretch-integration.md  24-stretch-not-moving-traj.md  25-stretch-integration-planning.md  26-wait_on_sync_error_reproduction.md  27-YOLO-with-depth.md  28-YOLO-simplified-depth-process.md  29-Action-await-stuck.md  3-CV-ML-tools.md  3.5-CVAT-ai.md  30-mixed-py-cpp-package.md  31-octomap.md  32-moveit-interface-can-not-plan.md  33-alternative-arm-control.md  34-go-back-train-model-again.md  34-stretch-ros-driver-issue.md  35-nav2-retune.md  4-YOLO-knowloadge.md  5-Using-pretrained-model.md  6-Sensor-to-pose-plan.md  7-keypoint-detection.md  8-waterable-region-E2E.md  9-yolo-false-positive.md  Meeting-note-6.md  Questions.md  meeting-note-10.md  (+11 more)
Journal/1-Plant-selection/: Plant-selection.md
Source_data_process/: case.md  fiftyone-export.py  fiftyone_view.ipynb  image_data_check.py  label_merging.py  pickout_labelme_image.py
plant_detection/: README.md  dependencies.md  fiftyone-export.py  fiftyone.ipynb  launch-fiftyone.py  live-predict.py  video-model-compare.py  yolo_expand_pretrain.py  yolo_predict_images.py  yolo_predict_livecv.py  yolo_pretrain_detect.py  yolo_pretrained_rename.py  yolo_staged_predict_livecv.py  yolo_train_keypoint_new.py  yolo_train_new.py  yolo_try_dataset.py
ros-ws/stretch_mover/: CMakeLists.txt  README.md  package.xml
ros-ws/stretch_mover/config/: All-combined.rviz  nav2_config_along_rtabmap.yaml  rtabmap.rviz  smac_lattic_primitives.json
ros-ws/stretch_mover/launch/: Full_auto.launch.py  driver_with_cam.py  full_auto.launch.py  manual_plant_search.launch.py  moveit_cmder.launch.py  nav2.launch.py  rtabmap_mapping.launch.py  ultralytics_ros.launch.py  yolo.launch.py  yolo_compare.launch.py  yolo_depth.launch.py  yolo_detect.launch.py  yolo_simple_depth.launch.py  yolo_subsystem.py
ros-ws/stretch_mover/msg/: KnownObject.msg  KnownObjectList.msg  YoloDetection.msg  YoloDetectionList.msg  YoloDetections.msg
ros-ws/stretch_mover/scripts/: MoveToPlants.py  Nav2ActionTest.py  QuickTrajTest.py  StatefulController.py  simgple_depth_process.py  simple_depth_process.py  stretch_moveit_test.py  yolo_process.py
ros-ws/stretch_mover/src/: masked_depth_process.cpp  move_interface_test.cpp  moveit_cmder.cpp  trajectory_control.cpp
ros-ws/stretch_mover/stretch_mover_utils/: grid_utils.py  marker_helper.py
